# server/api/swagger/swagger.yaml
@@ -1,4 +1,3 @@
----
 swagger: "2.0"
 info:
   description: "A assistant for wanfang team"
@@ -16,7 +15,39 @@ tags:
   description: "用户"
 schemes:
 - "http"
+# format of bodies a client can send (Content-Type)
+consumes:
+  - application/json
+# format of the responses to the client (Accepts)
+produces:
+  - application/json
 paths:
+  /hello:
+    # binds a127 app logic to a route
+    x-swagger-router-controller: hello_world
+    get:
+      description: Returns 'Hello' to the caller
+      # used as the method name of the controller
+      operationId: hello
+      parameters:
+        - name: name
+          in: query
+          description: The name of the person to whom to say hello
+          required: false
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            # a pointer to a definition
+            $ref: "#/definitions/HelloWorldResponse"
+        # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /swagger:
+    x-swagger-pipe: swagger_raw
   /user:
     get:
       tags:
@@ -220,6 +251,18 @@ securityDefinitions:
     name: "api_key"
     in: "header"
 definitions:
+  HelloWorldResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  ErrorResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
   LoginUser:
     type: "object"
     properties:
